--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="plot"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.1/d3.min.js"></script>
   <!-- <script src="data/data.json"></script> -->
+  <h1>Hello World</h1>
   <script src="plot.js"></script>
 </body>
 </html>
