--- a/index.html
+++ b/index.html
@@ -6,18 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: rgb(175, 231, 177);
+    }
+
+    .jumbotron {
+      background: #f5f4f4 url("static/images/AMP.gif") no-repeat bottom left;
+      background-size: 100% 100%;
+      overflow: auto;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 
 <body>
-
   <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+    <div class="jumbotron" style="text-align:center">
+      <h1 style="color:white;">Belly Button Biodiversity Dashboard</h1>
+      <p style="color:white;">Use the interactive charts below to explore the dataset</p>
       </div>
-    </div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
