some color changes

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <style>
     body {
-      background-color: rgb(175, 231, 177);
+      background-color: pink;
     }
 
     .jumbotron {
-      background: #f5f4f4 url("static/images/AMP.gif") no-repeat bottom left;
+      background: #f5f4f4 url("static/images/ping.gif") no-repeat bottom left;
       background-size: 100% 100%;
       overflow: auto;
       width: 100%;
@@ -28,8 +28,8 @@
 <body>
   <div class="container">
     <div class="jumbotron" style="text-align:center">
-      <h1 style="color:white;">Belly Button Biodiversity Dashboard</h1>
-      <p style="color:white;">Use the interactive charts below to explore the dataset</p>
+      <h1 style="color:rgb(66, 127, 207);">Belly Button Biodiversity Dashboard</h1>
+      <p style="color:black;text-emphasis:bold;">Use the interactive charts below to explore the dataset</p>
       </div>
     <div class="row">
       <div class="col-md-2">
