--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <h1 style="color:rgb(66, 127, 207);">Belly Button Biodiversity Dashboard</h1>
       <p style="color:black;text-emphasis:bold;">Use the interactive charts below to explore the dataset</p>
       </div>
+      <br>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
@@ -45,12 +46,13 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
+        <div id="bar1"></div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
       </div>
     </div>
+    <br>
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
