--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 </head>
 
 <body>
+  <br>
   <div class="container">
     <div class="jumbotron" style="text-align:center">
       <h1 style="color:rgb(66, 127, 207);">Belly Button Biodiversity Dashboard</h1>
-      <p style="color:black;text-emphasis:bold;">Use the interactive charts below to explore the dataset</p>
+      <p style="color:black;font-weight:bold;">Use the interactive charts below to explore the dataset</p>
       </div>
       <br>
     <div class="row">
@@ -65,7 +66,7 @@
   <script src="./static/js/app.js"></script>
   <!-- <script src="./static/js/bonus.js"></script> -->
   <script src="samples.json"></script>
-  
+  <br>
 </body>
 
 </html>
