--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     .jumbotron {
-      background: #f5f4f4 url("static/images/ping.gif") no-repeat bottom left;
+      background: #ffffff url("static/images/ping.gif") no-repeat bottom left;
       background-size: 100% 100%;
       overflow: auto;
       width: 100%;
@@ -31,7 +31,8 @@
     <div class="jumbotron" style="text-align:center">
       <h1 style="color:rgb(66, 127, 207);">Belly Button Biodiversity Dashboard</h1>
       <p style="color:black;font-weight:bold;">Use the interactive charts below to explore the dataset</p>
-      </div>
+      <h4 class="text-center" id="no_subject">Please Select From The Test Subject ID</h4>  
+    </div>
       <br>
     <div class="row">
       <div class="col-md-2">
