--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" >
+          <option>Select</option>
+          </select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -48,7 +50,7 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar1"></div>
+        <div id="bar"></div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
